# Sheets

./: CMakeLists.txt  README.md
Cli/: CMakeLists.txt  Log.cpp  Log.h
Cli/src/: Client.cpp  Client.h  Commands.cpp  Commands.h  Constants.cpp  Constants.h  Log.cpp  Log.h  SheetsClient.cpp  SheetsClient.h  StringUtils.cpp  StringUtils.h  TableManager.cpp  TableManager.h  TableUtils.cpp  TableUtils.h  main.cpp
Core/: CMakeLists.txt
Core/include/: FormulaTableCell.h  Table.h  TableCell.h  TokenType.h  TokenValues.h
Core/src/: ArithmeticFormulasUtils.cpp  ArithmeticFormulasUtils.h  CellType.h  DecimalTableCell.cpp  DecimalTableCell.h  FormulaTableCell.cpp  IntegerTableCell.cpp  IntegerTableCell.h  StringTableCell.cpp  StringTableCell.h  Table.cpp  TableCell.cpp  TableCellPosition.cpp  TableCellPosition.h  Token.cpp  TokenType.h  TokenValues.h
Core/src/TableCells/: DecimalTableCell.cpp  DecimalTableCell.h  FormulaTableCell.cpp  StringTableCell.cpp
Core/src/exceptions/: TableCellRangeException.cpp
Serialization/: CMakeLists.txt
Serialization/include/: CsvFormatter.h  CsvTableFormatting.h
Serialization/src/: CsvFormatter.cpp  CsvTableFormatting.cpp  UnknownElementException.cpp  UnknownElementException.h
SheetsCore/: CMakeLists.txt
SheetsCore.Tests/: CMakeLists.txt  FormulaTests.cpp  StringUtilsTests.cpp  TableCellTests.cpp  TableTests.cpp
SheetsCore.Tests/lib/catch2/: catch.hpp
SheetsCore.Tests/src/: FormulaTests.cpp  StringUtilsTests.cpp  TableCellTests.cpp  TableTests.cpp
SheetsCore/include/: DoubleTableCell.h  ExpressionTableCell.h  IntegerTableCell.h  StringTableCell.h  Table.h  TableCell.h
SheetsCore/src/: ArithmeticFormulasUtils.cpp  ArithmeticFormulasUtils.h  CellType.h  Constants.cpp  DoubleTableCell.cpp  ExpressionTableCell.cpp  FormulaCalculator.cpp  FormulaCalculator.h  FormulaTableCell.cpp  FormulaTableCell.h  IntegerTableCell.cpp  StringTableCell.cpp  StringUtils.cpp  StringUtils.h  Table.cpp  TableCell.cpp  TableCellParser.cpp  TableCellParser.h  TableCellPosition.cpp  TableCellPosition.h  TableCellRangeException.cpp  TableFormula.cpp  TableFormula.h  TableFormulaCalculator.cpp  TableFormulaCalculator.h  TableFormulaParser.cpp  TableFormulaParser.h  Token.cpp  Token.h  TokenType.h  TokenValues.cpp  TokenValues.h
SheetsCore/src/exceptions/: TableCellRangeException.h
Tests/: CMakeLists.txt
Tests/src/: CsvSerializationTests.cpp  FormulaTests.cpp  StringUtilsTests.cpp  TableCellTests.cpp  TableTests.cpp
Utils/: CMakeLists.txt
Utils/include/: Log.h  Strings.h
Utils/src/: Log.cpp  Strings.cpp
lib/catch/: CMakeLists.txt
src/Cli/src/: Client.cpp  Client.h  Commands.cpp  Commands.h  Log.cpp  SheetsClient.cpp  SheetsClient.h  TableManager.cpp  TableManager.h  main.cpp
src/Core/: CMakeLists.txt
src/Core/include/: Table.h  TableCell.h  Token.h
src/Core/src/: Cloneable.h  TableCellPosition.cpp  TableCellPosition.h
src/Core/src/TableCells/: FormulaTableCell.h  IntegerTableCell.h  StringTableCell.h
src/Core/src/exceptions/: TableCellRangeException.h
src/Serialization/include/: CsvFormatter.h
src/Tests/src/: TableCellTests.cpp
src/Utils/: CMakeLists.txt
src/Utils/include/: Files.h  Strings.h
src/Utils/src/: Files.cpp  Strings.cpp
